--- a/google6d5fba4a3661e317.html
+++ b/google6d5fba4a3661e317.html
@@ -1,8 +1,1 @@
-<html>
-  <head>
-    <title>Spring Bridge Framework</title>
-    <meta name="google-site-verification" content="Spring Bridge Framework">
-  </head>
-<body>
-</body>
-</html>
+google-site-verification: google6d5fba4a3661e317.html
